--- a/mobile/3-Tasks/addtasks.html
+++ b/mobile/3-Tasks/addtasks.html
@@ -1017,63 +1017,62 @@ style="width: 60px; text-align: center; padding: 6px; border: 2px solid var(--pr
 
 let editTaskFullDate = null; // Initialize as null
 
+
+
+
+
 document.addEventListener("DOMContentLoaded", async () => {
+    // Check if admin is logged in
     const currentAdmin = localStorage.getItem("currentAdminEmail");
     if (!currentAdmin) {
         alert("Admin not logged in!");
         return;
     }
 
+    // Initialize global variables
+    let editTaskFullDate = null; // Store full date range for PUT request in edit mode
+    let editTask = null; // Store task data if editing
 
     // Check if in edit mode via URL parameters
     const urlParams = new URLSearchParams(window.location.search);
-    const editTitle = urlParams.get("editTitle");
-    const editDate = urlParams.get("editDate");
+    const editTaskId = urlParams.get("editTaskId"); // Changed to editTaskId to match your backend
 
-    let editTask = null;
-    if (editTitle && editDate) {
-        // Fetch all tasks from server and find the matching task
+    if (editTaskId) {
+        // Fetch task data for editing
         try {
-            const response = await fetch(`https://beemazing.onrender.com/api/tasks?adminEmail=${encodeURIComponent(currentAdmin)}`, {
+            const response = await fetch(`https://beemazing.onrender.com/api/tasks?adminEmail=${encodeURIComponent(currentAdmin)}&taskId=${encodeURIComponent(editTaskId)}`, {
                 method: "GET",
                 headers: { "Content-Type": "application/json" }
             });
             const data = await response.json();
-            if (response.ok && data.tasks) {
-                // Find task by title and date (date matches start date of range)
-                editTask = data.tasks.find(task => task.title === editTitle && task.date.startsWith(editDate));
-                if (!editTask) {
-                    console.error(`Task not found: title=${editTitle}, date=${editDate}`);
-                }
+            if (response.ok && data.task) {
+                editTask = data.task;
             } else {
-                console.error("Failed to fetch tasks:", data.error || "No tasks returned");
+                console.error("Failed to fetch task:", data.error || "No task returned");
             }
         } catch (error) {
-            console.error("Error fetching tasks:", error);
+            console.error("Error fetching task:", error);
         }
     }
 
     if (editTask) {
-        // Set the full date range for the PUT request
-        editTaskFullDate = editTask.date; // Assign value here
         // Populate form for editing
+        editTaskFullDate = editTask.date; // Store original date range for PUT request
         document.getElementById("taskTitle").value = editTask.title || "";
         document.getElementById("taskNotes").value = editTask.notes || "";
+        
+        // Rooms
         if (editTask.room) {
-            selectedRooms = editTask.room.split(",").map(r => r.trim());
+            selectedRooms = editTask.room.split(",").map(r => r.trim()).filter(r => r);
             document.getElementById("roomSelection").value = selectedRooms.join(", ");
             document.getElementById("selectRoom").textContent = `Selected: ${selectedRooms.join(", ")}`;
         }
+
+        // Repeat
         document.getElementById("repeatSelection").value = editTask.repeat || "";
         document.getElementById("selectRepeat").textContent = editTask.repeat || "Select";
-        document.getElementById("settingsSelection").value = editTask.settings || "";
-        document.getElementById("selectSettings").textContent = editTask.settings || "Select";
-        document.getElementById("taskReminder").checked = !!editTask.reminder;
-        document.getElementById("addAlarmBtn").style.display = editTask.reminder ? "inline-block" : "none";
-        document.getElementById("RewardValue").value = editTask.reward || "";
-        document.getElementById("selectReward").textContent = editTask.reward ? `Buzz Points: ${editTask.reward} 🍯` : "Reward";
-
-        // Handle times per day/week/month
+        
+        // Times per day/week/month
         document.getElementById("timesPerDayInput").value = editTask.timesPerDay || "1";
         document.getElementById("timesPerWeekInput").value = editTask.timesPerWeek || "1";
         document.getElementById("timesPerMonthInput").value = editTask.timesPerMonth || "1";
@@ -1081,61 +1080,13 @@ document.addEventListener("DOMContentLoaded", async () => {
         document.getElementById("timesPerWeekGroup").style.display = editTask.repeat === "Weekly" ? "flex" : "none";
         document.getElementById("timesPerMonthGroup").style.display = editTask.repeat === "Monthly" ? "flex" : "none";
 
-        // Handle date mode
-        if (editTask.specificDates) {
-            document.getElementById("dateModeSelection").value = "specific-dates";
-            document.querySelectorAll(".mode-btn").forEach(btn => btn.classList.remove("active"));
-            document.querySelector(".mode-btn[data-mode='specific-dates']").classList.add("active");
-            document.getElementById("specificDatesGroup").style.display = "block";
-            document.getElementById("fromToDateGroup").style.display = "none";
-            document.getElementById("specificDaysGroup").style.display = "none";
-            selectedDates = editTask.specificDates.split(",").map(date => new Date(date));
-            specificDatesInput.value = editTask.specificDates;
-            flatpickrSpecific.setDate(selectedDates);
-            updateSelectedDatesDisplay();
-        } else if (editTask.date) {
-            document.getElementById("dateModeSelection").value = "date";
-            document.querySelectorAll(".mode-btn").forEach(btn => btn.classList.remove("active"));
-            document.querySelector(".mode-btn[data-mode='date']").classList.add("active");
-            document.getElementById("fromToDateGroup").style.display = "block";
-            document.getElementById("specificDatesGroup").style.display = "none";
-            document.getElementById("specificDaysGroup").style.display = "block";
+        // Settings
+        document.getElementById("settingsSelection").value = editTask.settings || "";
+        document.getElementById("selectSettings").textContent = editTask.settings || "Select";
 
-            const [from, to] = editTask.date.split(" to ");
-            document.getElementById("taskDate").value = from || "";
-            flatpickrFrom.setDate(from);
-            document.getElementById("dateDisplay").textContent = new Date(from).toLocaleDateString(undefined, {
-                month: "long",
-                day: "numeric",
-            });
-            if (to && to !== "3000-01-01") {
-                document.getElementById("taskDateTo").value = to;
-                flatpickrTo.setDate(to);
-                document.getElementById("dateDisplayTo").textContent = new Date(to).toLocaleDateString(undefined, {
-                    month: "long",
-                    day: "numeric",
-                });
-                dateToWrapper.style.display = "flex";
-                addEndDateBtn.style.display = "none";
-                dateMode = "from-to";
-            } else {
-                document.getElementById("taskDateTo").value = "";
-                document.getElementById("dateDisplayTo").textContent = "To Date";
-                dateToWrapper.style.display = "none";
-                addEndDateBtn.style.display = "block";
-                dateMode = "from";
-            }
-
-            selectedDays = editTask.daysOfWeek || ["Any"];
-            updateSelectedDaysDisplay();
-        }
-
-        if (editTask.users) {
-            selectedUsers = [...editTask.users].map(u => u.trim()).filter(u => u);
-            updateSelectedUsersDisplay();
-            populateUsers();
-        }
-
+        // Reminder and alarms
+        document.getElementById("taskReminder").checked = !!editTask.reminder;
+        document.getElementById("addAlarmBtn").style.display = editTask.reminder ? "inline-block" : "none";
         if (editTask.alarms?.length) {
             alarms = [...editTask.alarms];
             alarms.forEach((time) => {
@@ -1164,26 +1115,89 @@ document.addEventListener("DOMContentLoaded", async () => {
                 });
                 alarmWrapper.appendChild(alarmInput);
                 alarmWrapper.appendChild(removeButton);
-                alarmContainer.appendChild(alarmWrapper);
+                document.getElementById("alarmContainer").appendChild(alarmWrapper);
             });
+        }
+
+        // Reward
+        document.getElementById("RewardValue").value = editTask.reward || "";
+        document.getElementById("selectReward").textContent = editTask.reward ? `Buzz Points: ${editTask.reward} 🍯` : "Buzz Points";
+
+        // Date mode
+        if (editTask.specificDates) {
+            // Specific Dates mode
+            document.getElementById("dateModeSelection").value = "specific-dates";
+            document.querySelectorAll(".mode-btn").forEach(btn => btn.classList.remove("active"));
+            document.querySelector(".mode-btn[data-mode='specific-dates']").classList.add("active");
+            document.getElementById("specificDatesGroup").style.display = "block";
+            document.getElementById("fromToDateGroup").style.display = "none";
+            document.getElementById("specificDaysGroup").style.display = "none";
+            selectedDates = editTask.specificDates.split(",").map(date => new Date(date));
+            document.getElementById("specificDatesInput").value = editTask.specificDates;
+            flatpickrSpecific.setDate(selectedDates);
+            updateSelectedDatesDisplay();
+        } else {
+            // From-To Date mode
+            document.getElementById("dateModeSelection").value = "date";
+            document.querySelectorAll(".mode-btn").forEach(btn => btn.classList.remove("active"));
+            document.querySelector(".mode-btn[data-mode='date']").classList.add("active");
+            document.getElementById("fromToDateGroup").style.display = "block";
+            document.getElementById("specificDatesGroup").style.display = "none";
+            document.getElementById("specificDaysGroup").style.display = "block";
+
+            const [from, to] = editTask.date.split(" to ");
+            document.getElementById("taskDate").value = from || "";
+            flatpickrFrom.setDate(from);
+            document.getElementById("dateDisplay").textContent = new Date(from).toLocaleDateString(undefined, {
+                month: "long",
+                day: "numeric",
+            });
+            if (to && to !== "3000-01-01") {
+                document.getElementById("taskDateTo").value = to;
+                flatpickrTo.setDate(to);
+                document.getElementById("dateDisplayTo").textContent = new Date(to).toLocaleDateString(undefined, {
+                    month: "long",
+                    day: "numeric",
+                });
+                document.getElementById("dateToWrapper").style.display = "flex";
+                document.getElementById("addEndDateBtn").style.display = "none";
+                dateMode = "from-to";
+            } else {
+                document.getElementById("taskDateTo").value = "";
+                document.getElementById("dateDisplayTo").textContent = "To Date";
+                document.getElementById("dateToWrapper").style.display = "none";
+                document.getElementById("addEndDateBtn").style.display = "block";
+                dateMode = "from";
+            }
+
+            // Days of week
+            selectedDays = editTask.daysOfWeek || ["Any"];
+            updateSelectedDaysDisplay();
+        }
+
+        // Users
+        if (editTask.users) {
+            selectedUsers = [...editTask.users].map(u => u.trim()).filter(u => u);
+            updateSelectedUsersDisplay();
         }
     } else {
         // Initialize form for new task
-        populateUsers();
         document.getElementById("dateModeSelection").value = "date";
         document.querySelectorAll(".mode-btn").forEach(btn => btn.classList.remove("active"));
         document.querySelector(".mode-btn[data-mode='date']").classList.add("active");
         document.getElementById("fromToDateGroup").style.display = "block";
         document.getElementById("specificDatesGroup").style.display = "none";
         document.getElementById("specificDaysGroup").style.display = "block";
+        document.getElementById("timesPerDayInput").value = "1";
+        document.getElementById("timesPerWeekInput").value = "1";
+        document.getElementById("timesPerMonthInput").value = "1";
+        selectedDays = ["Any"];
+        updateSelectedDaysDisplay();
     }
+
+    // Populate users (called for both new and edit modes)
+    await populateUsers();
 });
-
-
-
-
-
-
 
 
 
@@ -1249,39 +1263,60 @@ document.addEventListener("DOMContentLoaded", async () => {
 
 
 
-        const populateUsers = () => {
-    const allUserData = JSON.parse(localStorage.getItem("userData")) || {};
+
+
+
+        const populateUsers = async () => {
     const currentAdmin = localStorage.getItem("currentAdminEmail");
-    const users = allUserData[currentAdmin]?.users || [];
-    const permissions = allUserData[currentAdmin]?.permissions || {};
+    if (!currentAdmin) {
+        console.error("No admin email found in localStorage");
+        userList.innerHTML = "<li>No users available</li>";
+        return;
+    }
 
-    // Include all users and Admins
-    const allUsers = [...new Set([...users, ...Object.keys(permissions).filter(u => permissions[u] === "Admin")])];
+    userList.innerHTML = "<li>Loading users...</li>";
 
-    userList.innerHTML = "";
-    allUsers.forEach((user) => {
-        const userItem = document.createElement("li");
-        userItem.textContent = user;
-        userItem.style.padding = "10px";
-        userItem.style.margin = "5px 0";
-        userItem.style.border = "1px solid var(--selection-border)";
-        userItem.style.borderRadius = "8px";
-        userItem.style.cursor = "pointer";
-        userItem.style.textAlign = "center";
+    try {
+        // Fetch users from the backend
+        const response = await fetch(`https://beemazing.onrender.com/api/users?adminEmail=${encodeURIComponent(currentAdmin)}`, {
+            method: "GET",
+            headers: { "Content-Type": "application/json" },
+            cache: "no-store" // Prevent caching to ensure fresh data
+        });
 
-        if (selectedUsers.includes(user)) {
-            userItem.style.backgroundColor = "var(--primary-color)";
-            userItem.style.color = "var(--secondary-color)";
-        } else {
-            userItem.style.backgroundColor = "var(--light-bg)";
-            userItem.style.color = "var(--text-color)";
+        const data = await response.json();
+        if (!response.ok) throw new Error(data.error || "Failed to fetch users");
+
+        const users = data.users || [];
+        const permissions = data.permissions || {};
+
+        // Include all users and Admins
+        const allUsers = [...new Set([...users, ...Object.keys(permissions).filter(u => permissions[u] === "Admin")])];
+
+        // Update localStorage to keep it in sync
+        const allUserData = JSON.parse(localStorage.getItem("userData")) || {};
+        allUserData[currentAdmin] = { users, permissions };
+        localStorage.setItem("userData", JSON.stringify(allUserData));
+
+        // Clear the loading message
+        userList.innerHTML = "";
+
+        if (allUsers.length === 0) {
+            userList.innerHTML = "<li>No users available</li>";
+            return;
         }
 
-        userItem.addEventListener("mouseover", () => {
-            userItem.style.backgroundColor = "var(--primary-color)";
-            userItem.style.color = "var(--secondary-color)";
-        });
-        userItem.addEventListener("mouseout", () => {
+        // Populate the user list
+        allUsers.forEach((user) => {
+            const userItem = document.createElement("li");
+            userItem.textContent = user;
+            userItem.style.padding = "10px";
+            userItem.style.margin = "5px 0";
+            userItem.style.border = "1px solid var(--selection-border)";
+            userItem.style.borderRadius = "8px";
+            userItem.style.cursor = "pointer";
+            userItem.style.textAlign = "center";
+
             if (selectedUsers.includes(user)) {
                 userItem.style.backgroundColor = "var(--primary-color)";
                 userItem.style.color = "var(--secondary-color)";
@@ -1289,21 +1324,38 @@ document.addEventListener("DOMContentLoaded", async () => {
                 userItem.style.backgroundColor = "var(--light-bg)";
                 userItem.style.color = "var(--text-color)";
             }
-        });
-        userItem.addEventListener("click", () => {
-            if (selectedUsers.includes(user)) {
-                selectedUsers = selectedUsers.filter((u) => u !== user);
-                userItem.style.backgroundColor = "var(--light-bg)";
-                userItem.style.color = "var(--text-color)";
-            } else {
-                selectedUsers.push(user);
+
+            userItem.addEventListener("mouseover", () => {
                 userItem.style.backgroundColor = "var(--primary-color)";
                 userItem.style.color = "var(--secondary-color)";
-            }
-            updateSelectedUsersDisplay();
+            });
+            userItem.addEventListener("mouseout", () => {
+                if (selectedUsers.includes(user)) {
+                    userItem.style.backgroundColor = "var(--primary-color)";
+                    userItem.style.color = "var(--secondary-color)";
+                } else {
+                    userItem.style.backgroundColor = "var(--light-bg)";
+                    userItem.style.color = "var(--text-color)";
+                }
+            });
+            userItem.addEventListener("click", () => {
+                if (selectedUsers.includes(user)) {
+                    selectedUsers = selectedUsers.filter((u) => u !== user);
+                    userItem.style.backgroundColor = "var(--light-bg)";
+                    userItem.style.color = "var(--text-color)";
+                } else {
+                    selectedUsers.push(user);
+                    userItem.style.backgroundColor = "var(--primary-color)";
+                    userItem.style.color = "var(--secondary-color)";
+                }
+                updateSelectedUsersDisplay();
+            });
+            userList.appendChild(userItem);
         });
-        userList.appendChild(userItem);
-    });
+    } catch (error) {
+        console.error("Error fetching users:", error);
+        userList.innerHTML = "<li>Error loading users</li>";
+    }
 };
 
 
