Parent receiving tasks #4

--- a/mobile/4-Market/market.html
+++ b/mobile/4-Market/market.html
@@ -269,7 +269,7 @@
 <body>
     <div class="header">
         <i class="fas fa-bars menu-icon" aria-label="Menu"></i>
-        <div class="title">Market 1</div>
+        <div class="title">Market</div>
     </div>
 
     <div class="content">
