--- a/mobile/3-Tasks/addtasks.html
+++ b/mobile/3-Tasks/addtasks.html
@@ -1264,100 +1264,90 @@ document.addEventListener("DOMContentLoaded", async () => {
 
 
 
-
-
-        const populateUsers = async () => {
+        async function populateUsers() {
     const currentAdmin = localStorage.getItem("currentAdminEmail");
     if (!currentAdmin) {
         console.error("No admin email found in localStorage");
-        userList.innerHTML = "<li>No users available</li>";
+        document.getElementById("selectUsers").textContent = "Error: No admin logged in";
         return;
     }
 
-    userList.innerHTML = "<li>Loading users...</li>";
-
     try {
-        // Fetch users from the backend
-        const response = await fetch(`https://beemazing.onrender.com/api/users?adminEmail=${encodeURIComponent(currentAdmin)}`, {
+        const response = await fetch(`https://beemazing.onrender.com/get-users?adminEmail=${encodeURIComponent(currentAdmin)}`, {
             method: "GET",
-            headers: { "Content-Type": "application/json" },
-            cache: "no-store" // Prevent caching to ensure fresh data
+            headers: { "Content-Type": "application/json" }
         });
 
         const data = await response.json();
-        if (!response.ok) throw new Error(data.error || "Failed to fetch users");
+        console.log("Fetched users:", data); // Debug log
 
-        const users = data.users || [];
-        const permissions = data.permissions || {};
-
-        // Include all users and Admins
-        const allUsers = [...new Set([...users, ...Object.keys(permissions).filter(u => permissions[u] === "Admin")])];
-
-        // Update localStorage to keep it in sync
-        const allUserData = JSON.parse(localStorage.getItem("userData")) || {};
-        allUserData[currentAdmin] = { users, permissions };
-        localStorage.setItem("userData", JSON.stringify(allUserData));
-
-        // Clear the loading message
-        userList.innerHTML = "";
-
-        if (allUsers.length === 0) {
-            userList.innerHTML = "<li>No users available</li>";
-            return;
+        if (!response.ok || !data.success) {
+            throw new Error(data.message || `HTTP ${response.status}`);
         }
 
-        // Populate the user list
-        allUsers.forEach((user) => {
-            const userItem = document.createElement("li");
-            userItem.textContent = user;
-            userItem.style.padding = "10px";
-            userItem.style.margin = "5px 0";
-            userItem.style.border = "1px solid var(--selection-border)";
-            userItem.style.borderRadius = "8px";
-            userItem.style.cursor = "pointer";
-            userItem.style.textAlign = "center";
+        const { users = [], permissions = {} } = data;
 
-            if (selectedUsers.includes(user)) {
-                userItem.style.backgroundColor = "var(--primary-color)";
-                userItem.style.color = "var(--secondary-color)";
-            } else {
-                userItem.style.backgroundColor = "var(--light-bg)";
-                userItem.style.color = "var(--text-color)";
-            }
+        // Filter non-admin users
+        const nonAdminUsers = users.filter(user => permissions[user] !== "Admin");
 
-            userItem.addEventListener("mouseover", () => {
-                userItem.style.backgroundColor = "var(--primary-color)";
-                userItem.style.color = "var(--secondary-color)";
-            });
-            userItem.addEventListener("mouseout", () => {
-                if (selectedUsers.includes(user)) {
-                    userItem.style.backgroundColor = "var(--primary-color)";
-                    userItem.style.color = "var(--secondary-color)";
+        // Update localStorage
+        let storedUsers = JSON.parse(localStorage.getItem("users") || "[]");
+        storedUsers = storedUsers.filter(user => nonAdminUsers.includes(user)); // Remove deleted users
+        nonAdminUsers.forEach(user => {
+            if (!storedUsers.includes(user)) storedUsers.push(user); // Add new users
+        });
+        localStorage.setItem("users", JSON.stringify(storedUsers));
+
+        // Clear existing user options
+        const userOptionsContainer = document.getElementById("userOptions");
+        if (!userOptionsContainer) {
+            console.error("userOptions container not found");
+            return;
+        }
+        userOptionsContainer.innerHTML = "";
+
+        // Populate user options
+        nonAdminUsers.forEach(user => {
+            const label = document.createElement("label");
+            label.style.display = "flex";
+            label.style.alignItems = "center";
+            label.style.padding = "10px";
+            label.style.margin = "5px 0";
+            label.style.background = selectedUsers.includes(user) ? "var(--primary-color)" : "var(--accent-color)";
+            label.style.borderRadius = "8px";
+            label.style.cursor = "pointer";
+
+            const checkbox = document.createElement("input");
+            checkbox.type = "checkbox";
+            checkbox.value = user;
+            checkbox.checked = selectedUsers.includes(user);
+            checkbox.style.marginRight = "10px";
+            checkbox.style.accentColor = "var(--primary-color)";
+            checkbox.addEventListener("change", () => {
+                if (checkbox.checked) {
+                    if (!selectedUsers.includes(user)) selectedUsers.push(user);
+                    label.style.background = "var(--primary-color)";
                 } else {
-                    userItem.style.backgroundColor = "var(--light-bg)";
-                    userItem.style.color = "var(--text-color)";
-                }
-            });
-            userItem.addEventListener("click", () => {
-                if (selectedUsers.includes(user)) {
-                    selectedUsers = selectedUsers.filter((u) => u !== user);
-                    userItem.style.backgroundColor = "var(--light-bg)";
-                    userItem.style.color = "var(--text-color)";
-                } else {
-                    selectedUsers.push(user);
-                    userItem.style.backgroundColor = "var(--primary-color)";
-                    userItem.style.color = "var(--secondary-color)";
+                    selectedUsers = selectedUsers.filter(u => u !== user);
+                    label.style.background = "var(--accent-color)";
                 }
                 updateSelectedUsersDisplay();
             });
-            userList.appendChild(userItem);
+
+            label.appendChild(checkbox);
+            label.appendChild(document.createTextNode(user));
+            userOptionsContainer.appendChild(label);
         });
+
+        // Update display
+        updateSelectedUsersDisplay();
+        document.getElementById("selectUsers").textContent = nonAdminUsers.length ? "Select" : "No users available";
+
     } catch (error) {
         console.error("Error fetching users:", error);
-        userList.innerHTML = "<li>Error loading users</li>";
+        document.getElementById("selectUsers").textContent = "Error loading users";
     }
-};
-
+}
 
 
 
