--- a/mobile/2-UserProfiles/userAdmin.html
+++ b/mobile/2-UserProfiles/userAdmin.html
@@ -1067,6 +1067,23 @@
 }
 
 
+
+.complete-btn {
+    background-color: #4CAF50;
+    color: white;
+    padding: 8px;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+    margin-top: 8px;
+    font-size: 14px;
+}
+.complete-btn:hover {
+    background-color: #333;
+}
+
+
+
   </style>
 
 
@@ -2108,13 +2125,26 @@ async function loadTasks() {
 
 
 async function loadYourTasks() {
-    const adminEmail = localStorage.getItem("currentAdminEmail");
+    let adminEmail = localStorage.getItem("currentAdminEmail");
+    const urlParams = new URLSearchParams(window.location.search);
+    let currentUser = urlParams.get("user");
     const yourContainer = document.getElementById("yourTasks");
-    const currentUser = urlParams.get("user"); // Current Admin user
     yourContainer.innerHTML = "<p>Loading...</p>";
 
+    // Fallbacks for missing parameters
+    if (!adminEmail) {
+        adminEmail = urlParams.get("admin");
+        if (adminEmail) {
+            localStorage.setItem("currentAdminEmail", adminEmail);
+        }
+    }
+    if (!currentUser) {
+        currentUser = adminEmail; // Default to admin as user if no user specified
+    }
+
     if (!adminEmail || !currentUser) {
-        yourContainer.innerHTML = "<p>Error: Admin or user not logged in</p>";
+        yourContainer.innerHTML = "<p>Error: Unable to load tasks. Please log in again.</p>";
+        console.error("Missing adminEmail or currentUser", { adminEmail, currentUser });
         return;
     }
 
@@ -2126,7 +2156,7 @@ async function loadYourTasks() {
         if (!res.ok) throw new Error(data.error || "Failed to load tasks");
 
         const allTasks = data.tasks || [];
-        const todayStr = selectedDate;
+        const todayStr = selectedDate || new Date().toISOString().split("T")[0];
 
         // Filter tasks assigned to the current Admin user
         const yourTasks = allTasks.filter(task => {
@@ -2161,7 +2191,7 @@ async function loadYourTasks() {
                 div.className = "your-task";
                 div.innerHTML = `
                     <div class="task-title">${task.title}</div>
-                    <div class="task-info">${task.description || "No description provided"}</div>
+                    <div class="task-info">${task.notes || "No description provided"}</div>
                     <div class="task-info">Due: ${new Date(todayStr).toLocaleDateString()}</div>
                     <div class="task-info">Status: ${
                         userTurns.length === 0
@@ -2170,15 +2200,47 @@ async function loadYourTasks() {
                               (pendingTurns > 0 ? `, ${pendingTurns} Pending Review` : "")
                     }</div>
                     <div class="task-info">Assigned to: ${task.users.join(", ")}</div>
+                    ${
+                        completedTurns < turnData.requiredTimes && pendingTurns === 0
+                            ? `<button class="complete-btn" onclick="submitTaskCompletion('${task.title}', '${todayStr}', '${currentUser}')">Mark Complete</button>`
+                            : ""
+                    }
                 `;
                 yourContainer.appendChild(div);
             });
         }
     } catch (err) {
         console.error("Error loading your tasks:", err);
-        yourContainer.innerHTML = "<p>Error loading your tasks</p>";
+        yourContainer.innerHTML = "<p>Error loading your tasks: " + err.message + "</p>";
     }
 }
+
+// Add task completion function
+async function submitTaskCompletion(title, date, user) {
+    try {
+        const adminEmail = localStorage.getItem("currentAdminEmail");
+        const response = await fetch("https://beemazing.onrender.com/api/submit-task", {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify({
+                adminEmail,
+                title,
+                date,
+                user,
+                repetition: 1
+            })
+        });
+        const data = await response.json();
+        if (!response.ok) throw new Error(data.error || "Failed to submit task");
+        alert("Task submitted for review!");
+        loadYourTasks();
+    } catch (err) {
+        console.error("Error submitting task:", err);
+        alert("Error submitting task: " + err.message);
+    }
+}
+
+
 
 
 
